Release TinyCraft Launcher v1.2.1